--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "scrape-oholic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mongoose": "^5.6.11"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,14 +26,5 @@
   "bugs": {
     "url": "https://github.com/TheGreekCuban/scrape-oholic/issues"
   },
-  "homepage": "https://github.com/TheGreekCuban/scrape-oholic#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "express-handlebars": "^3.1.0",
-    "mongoose": "^5.6.11"
-  }
+  "homepage": "https://github.com/TheGreekCuban/scrape-oholic#readme"
 }
