--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {},
   "scripts": {
